test/failing/cycle3.trunnel

struct x {
  struct y {
    struct x the_x;
  } the_y;
}

